iwantgo-deployment.yaml
apiVersion: apps/v1 # for kubectl versions >= 1.9.0 use apps/v1
kind: Deployment
metadata:
  name: iwantgo-deployment
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: iwantgo-deployment
  template:
    metadata:
      labels:
        app: iwantgo-deployment
    spec:
      containers:
      - name: iwantgo-pod
        image: jimmyfu87/iwantgo
        ports:
        - containerPort: 8000
