iwantgo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iwantgo-service
spec:
  type: NodePort
  ports:
  - port: 8000
    nodePort: 30390
    protocol: TCP
    targetPort: 8000
  selector:
    app: iwantgo-deployment
