iwantgo-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: iwantgo-service2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: iwantgo-deployment
