iwantgo-ingress.yaml
apiVersion: apps/v1 # for kubectl versions >= 1.9.0 use apps/v1
kind: Deployment
metadata:
  name: iwantgo-deployment
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: iwantgo-deployment
  template:
    metadata:
      labels:
        app: iwantgo-deployment
    spec:
      containers:
      - name: iwantgo-pod
        image: jimmyfu87/iwantgo
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: iwantgo-service2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: iwantgo-deployment

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iwantgo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: "iwantgo.com"
    http:
      paths:
      - path: /echo(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: iwantgo-service2
            port:
              number: 80
